--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <img src="logos-canais/band.png" alt="">
         <img src="logos-canais/cartoon.png> alt=">
         <img src="logos-canais/combate.png" alt="">
-        <img src="logos-canais/disney.png alt="">
+        <img src="logos-canais/disney.png alt=">
         <img src="logos-canais/ESPN.png" alt="">
         <img src="logos-canais/ESPN.png" alt="">
         <img src="logos-canais/hbomax.png" alt="">
@@ -58,7 +58,7 @@
         <img src="logos-canais/sbt.png" alt="">
         <img src="logos-canais/Star+.webp" alt="">
         <img src="logos-canais/telecine.png" alt="">
-        <img src="logos-canais/terror.png" alt="">
+        <img src="logos-canais/cartoon.png" alt="">
         <img src="logos-canais/ufc.png" alt="">
     </h1>
 </div>
