--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <img src="logos-canais/telecine.png" alt="">
         <img src="logos-canais/cartoon.png" alt="">
         <img src="logos-canais/disney.png" alt="">
+        <img src="logos-canais/ufc.png" alt="">
     </h1>
 </div>
     </main>
