--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <img src="Img-gerais/shein compras.jpg" alt="">
         <img src="Img-gerais/shein.png" alt="">
         <img src="Img-gerais/shopee-compras.png" alt="">
+        <img src="Img-gerais/shopee.png" alt="">
         <img src="Img-gerais/sinal de começou gravaçao.png" alt="">
 
 
