--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <img src="Img-gerais/shopee-compras.png" alt="">
         <img src="Img-gerais/shopee.png" alt="">
         <img src="Img-gerais/sinal de começou gravaçao.png" alt="">
+        <img src="Img-gerais/shopee.png" alt="shopee">
 
 
         <!-- LOGO DOS CANAIS -->
