--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <img src="Img-gerais/internet-compras.jpg" alt="">
         <img src="Img-gerais/internet.jpg" alt="">
         <img src="Img-gerais/jovens amigo no sinema.jpg" alt="">
-        <img src="Img-gerais/Mercado Livre.jpg" alt="">
+        <img src="Img-gerais/mercado livre 1.png" alt="">
+        <img src="Img-gerais/mercado livre.png" alt="">
         <img src="Img-gerais/moça segurando notebook.webp" alt="">
         <img src="Img-gerais/outros produtos 1.jpg" alt="">
         <img src="Img-gerais/outros produtos.jpg" alt="">
