adicionando vamos la

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
         <img src="Img-gerais/shopee.png" alt="">
         <img src="Img-gerais/sinal de começou gravaçao.png" alt="">
         <img src="Img-gerais/shopee.png" alt="shopee">
+        <img src="Img-gerais/celular-tablet-celular-pc.png" alt="shopee">
+        <img src="Img-gerais/familia  assistindo filme.jpg" alt="shopee">
+        <img src="Img-gerais/compra-segura.png" alt="shopee">
+        <img src="Img-gerais/Jovens na frente da tv.jpg" alt="shopee">
+        <img src="Img-gerais/familia  assistindo filme.jpg" alt="shopee">
+        <img src="Img-gerais/imagem da tv dentro da tv.png" alt="shopee">
+        <img src="Img-gerais/tv-box.png" alt="shopee">
 
 
         <!-- LOGO DOS CANAIS -->
