--- a/index.html
+++ b/index.html
@@ -12,40 +12,27 @@
         
         <!-- OUTRAS IMAGEMS -->
         <img src="Img-gerais/AliExpress.webp" alt="">
-        <img src="Img-gerais/boneca-outros.jpg" alt="">
-        <img src="Img-gerais/camera gravando.png" alt="">
-        <img src="Img-gerais/canais-compras.jpg" alt="">
         <img src="Img-gerais/canais.jpg" alt="">
-        <img src="Img-gerais/casal no cinema.jpg" alt="">
-        <img src="Img-gerais/cinema fisto por tras.jpg" alt="">
-        <img src="Img-gerais/engrenagem.jpg" alt="">
-        <img src="Img-gerais/familia ao cinema.jpg" alt="">
-        <img src="Img-gerais/garoto-shopee.avif alt="">
-        <img src="Img-gerais/idosos no cinema.avif" alt="">
-        <img src="Img-gerais/ilustracao-de-desenvolvimento-web-renderizacao-3d_448714-103.jpg" alt="">
-        <img src="Img-gerais/internet-compras.jpg" alt="">
-        <img src="Img-gerais/internet.jpg" alt="">
-        <img src="Img-gerais/jovens amigo no sinema.jpg" alt="">
         <img src="Img-gerais/mercado livre 1.png" alt="">
-        <img src="Img-gerais/mercado livre.png" alt="">
         <img src="Img-gerais/moça segurando notebook.webp" alt="">
-        <img src="Img-gerais/outros produtos 1.jpg" alt="">
-        <img src="Img-gerais/outros produtos.jpg" alt="">
-        <img src="Img-gerais/pote de pipoca.jpg" alt="">
-        <img src="Img-gerais/reserva 3.jpg" alt="">
-        <img src="Img-gerais/reseva 1.jpg" alt="">
-        <img src="Img-gerais/shein compras.jpg" alt="">
         <img src="Img-gerais/shein.png" alt="">
-        <img src="Img-gerais/shopee-compras.png" alt="">
         <img src="Img-gerais/shopee.png" alt="">
-        <img src="Img-gerais/sinal de começou gravaçao.png" alt="">
         <img src="Img-gerais/shopee.png" alt="shopee">
         <img src="Img-gerais/celular-tablet-celular-pc.png" alt="shopee">
-        <img src="Img-gerais/familia  assistindo filme.jpg" alt="shopee">
         <img src="Img-gerais/compra-segura.png" alt="shopee">
         <img src="Img-gerais/Jovens na frente da tv.jpg" alt="shopee">
-        <img src="Img-gerais/familia  assistindo filme.jpg" alt="shopee">
         <img src="Img-gerais/imagem da tv dentro da tv.png" alt="shopee">
+        <img src="Img-gerais/apps geral.png" alt="shopee">
+        <img src="Img-gerais/Celular-qualquer.png" alt="shopee">
+        <img src="Img-gerais/contarto.png" alt="shopee">
+        <img src="Img-gerais/mercado.png" alt="shopee">
+        <img src="Img-gerais/mulher dando joinha com celular na mao.png" alt="shopee">
+        <img src="Img-gerais/mulher olahndo para a tela.png" alt="shopee">
+        <img src="Img-gerais/todas as redes.png" alt="shopee">
+        <img src="Img-gerais/tv-box.png" alt="shopee">
+        <img src="Img-gerais/tv-box.png" alt="shopee">
+        <img src="Img-gerais/tv-box.png" alt="shopee">
+        <img src="Img-gerais/tv-box.png" alt="shopee">
         <img src="Img-gerais/tv-box.png" alt="shopee">
 
 
