--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <img src="Img-gerais/mercado livre 1.png" alt="">
         <img src="Img-gerais/moça segurando notebook.webp" alt="">
         <img src="Img-gerais/shein.png" alt="">
-        <img src="Img-gerais/shopee.png" alt="">
         <img src="Img-gerais/shopee.png" alt="shopee">
         <img src="Img-gerais/celular-tablet-celular-pc.png" alt="shopee">
         <img src="Img-gerais/compra-segura.png" alt="shopee">
@@ -30,6 +29,11 @@
         <img src="Img-gerais/mulher olahndo para a tela.png" alt="shopee">
         <img src="Img-gerais/todas as redes.png" alt="shopee">
         <img src="Img-gerais/tv-box.png" alt="shopee">
+        <img src="Img-gerais/internet.png" alt="shopee">
+        <img src="Img-gerais/tvbox.png">
+        <img src="Img-gerais/tvbox2.png" alt="shopee">
+        <img src="Img-gerais/wa-sender.png" alt="shopee">
+
 
 
         <!-- LOGO DOS CANAIS -->
