--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>
         
         <!-- OUTRAS IMAGEMS -->
-        <img src="Img-gerais/AliExpress.webp" alt="">
+        <img src="Img-gerais/Aliexpress_logo.png" alt="">
         <img src="Img-gerais/canais.jpg" alt="">
         <img src="Img-gerais/mercado livre 1.png" alt="">
         <img src="Img-gerais/moça segurando notebook.webp" alt="">
@@ -31,7 +31,6 @@
         <img src="Img-gerais/tv-box.png" alt="shopee">
         <img src="Img-gerais/internet.png" alt="shopee">
         <img src="Img-gerais/tvbox.png">
-        <img src="Img-gerais/tvbox2.png" alt="shopee">
         <img src="Img-gerais/wa-sender.png" alt="shopee">
 
 
